src/objects/Apttus_Config2__SummaryGroup__c.object
<CustomObject>
    <fields>
        <fullName>APTS_Total_Quote_Price__c</fullName>
        <label>Total Quote Price</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>APTS_Total_Standard_Price__c</fullName>
        <label>Total Standard Price</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>APTS_Net_Adjustment_Percent__c</fullName>
        <formula>Apttus_Config2__NetAdjustmentPercent__c * -1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Net Adj. (%)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__NetPrice__c</fullName>
        <description>The net price for the group is the Adjusted Price after applying the Group Adjustment %</description>
        <label>Net Price</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>        
</CustomObject>